sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/Journey_Plan_Item__c.object-meta.xml
<CustomObject>
    <label>Journey Plan Item</label>
    <nameField>
        <label>Journey Plan Item		 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>