sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journey Plan Items</relationshipLabel>
    <relationshipName>Journey_Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>