sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Actual_Check_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Check_Out_Time__c</fullName>
    <label>Actual Check Out Time</label>
    <type>DateTime</type>
</CustomField>