sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Actual_Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visit_Duration__c</fullName>
    <label>Actual Visit Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>