sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Check_In_Address__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Address__c</fullName>
    <label>Check In Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>