sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Check_Out_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Longitude__c</fullName>
    <label>Check Out Longitude</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>