sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Distance_From_Previous__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Previous__c</fullName>
    <label>Distance From Previous</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>