sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <label>Estimated Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>