sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Journey_Plan__c.field-meta.xml
<CustomField>
    <fullName>Journey_Plan__c</fullName>
    <label>Journey Plan</label>
    <referenceTo>Journey_Plan__c</referenceTo>
    <relationshipLabel>Journey Plan Items</relationshipLabel>
    <relationshipName>Journey_Plan_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>