sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Planned_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Visit_Time__c</fullName>
    <label>Planned Visit Time</label>
    <type>Time</type>
</CustomField>