sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Travel_Time_From_Previous__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_From_Previous__c</fullName>
    <label>Travel Time From Previous</label>
    <description>Actual travel time in minutes from the previous completed stop (this check-in minus previous check-out).</description>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>