sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journey_Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>