sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Visit_Order__c.field-meta.xml
<CustomField>
    <fullName>Visit_Order__c</fullName>
    <label>Visit Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>