sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Visit_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Visit_Outcome__c</fullName>
    <label>Visit Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Partially Successful</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>