sfa-dms/force-app/main/default/objects/Journey_Plan_Item__c/fields/Visit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Visit_Purpose__c</fullName>
    <label>Visit Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly Review</fullName>
            </value>
            <value>
                <fullName>Product Demo</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Order Delivery</fullName>
            </value>
            <value>
                <fullName>Stock Check</fullName>
            </value>
            <value>
                <fullName>Follow-up Visit</fullName>
            </value>
            <value>
                <fullName>New Account Meeting</fullName>
            </value>
            <value>
                <fullName>Complaint Resolution</fullName>
            </value>
            <value>
                <fullName>Payment Collection</fullName>
            </value>
            <value>
                <fullName>Relationship Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>